# Prediactor

./: AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  requirements.txt
backen/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backen/scraper/: __init__.py  com.prediactor.daily.plist  com.prediactor.scraper.plist  load_to_db.py  run_daily.sh  run_daily_all.sh  scraper.py
backen/scraper/lupin/: CHANGELOG.md  package-lock.json  package.json
backen/scraper/lupin/benchmarks/: duckduckgo-queries.json  duckduckgo-results.json
backen/scraper/lupin/docs/: cli-reference.md  configuration.md  llm-extraction.md  lupinexplain.md  platforms.md
backen/scraper/lupin/examples/: tiktok-sample-urls.txt
backen/scraper/lupin/scripts/: benchmark-duckduckgo.mjs  check-platform-packages.mjs  instagram-product-trends.mjs  install-daily-schedule.ps1  install-instagram-daily-schedule.ps1  live-benchmark.mjs  run-instagram-trends-daily.ps1  run-social-trends-daily.ps1  run-tests.mjs  run-tiktok-trends-daily.ps1  tiktok-product-trends.mjs
backen/scraper/lupin/src/: cli.js  cookies.js  detection.js  extractors.js  http.js  index.js  mcp-server.js  platform-sdk.js  profile-lock.js  scraper.js  version.js
backen/scraper/lupin/test/: brave-search-quality.test.js  browser-deps.test.js  browser-manager.test.js  crawl-cli.test.js  crawl-discovery.test.js  crawl-frontier.test.js  crawl-output.test.js  (+31 more)
backen/scraper/lupin/test-support/: live-mcp.js
backen/scraper/rednote/: REDNOTE_GUIDE.md  check_cookie.sh  com.prediactor.cookiecheck.plist  run_daily.sh
(+110 files in other folders)
