[project]
name = "prediactor-backend"
version = "0.1.0"
description = "Prediactor FastAPI backend — scrapes social posts and runs AI trend analysis (scaffold)."
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    # "anthropic>=0.40",  # AI provider — STUB ONLY for now; uncomment when wiring real calls
    "requests>=2.34.2",
    "xhshow>=0.1.9",
]

[dependency-groups]
dev = ["ruff>=0.7"]

# This is an application, not a distributable package: uv manages the venv + deps
# but does not try to build/install `app` as a wheel. We run it via `uv run uvicorn app.main:app`.
[tool.uv]
package = false

[tool.ruff]
line-length = 100
